fix z-index

--- a/ui/src/app/applications/components/filter/filter.scss
+++ b/ui/src/app/applications/components/filter/filter.scss
@@ -21,10 +21,10 @@ $slate: #191826;
         .argo-button {
             margin-left: auto;
             background: $slate;
-        }
 
-        .argo-button:hover {
-            background: $sidebar-color !important;
+            &:hover {
+                background: $sidebar-color !important;
+            }
         }
     }
 
