--- a/ui/src/app/shared/components/page/page.scss
+++ b/ui/src/app/shared/components/page/page.scss
@@ -40,6 +40,7 @@
         }
         &__top-bar {
             position: sticky;
+            z-index: 0;
         }
     }
 
